--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Usuario{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Usuario</h1>
 
     <table class="table">
         <tbody>
@@ -12,7 +12,7 @@
                 <td>{{ user.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nombre</th>
                 <td>{{ user.name }}</td>
             </tr>
             <tr>
@@ -20,15 +20,15 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <th>CreatedAt</th>
+                <th>Fecha de creación</th>
                 <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('user_index') }}">Volver</a>
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('user_edit', {'id': user.id}) }}">Editar</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
